<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_about_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/pic_personal"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_about_text"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextBlack16sptv"
        android:text="@string/about_text"/>

</LinearLayout>